snapshot-tests/tests/snapshots/parser__bad_floats__no_digit_before_dot_neg.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ no_digit_before_dot_neg:1:5
  │
1 │ a = -.7
  │     ^ invalid integer: expected digit after sign at a
